新改了断点下载

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name="com.dfxh.wang.coderead.MyApp"
         android:theme="@style/AppTheme">
         <service
             android:name=".MyService"
